# Quiz-Back

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: main.py
app/api/v1/: dependencies.py
app/api/v1/routers/: audios.py  authentication.py  (+7 more)
app/core/: config.py  openapi.py
app/db/: seed.py  seed_data.yaml  session.py
app/db/models/: audios.py  base.py  bonus.py  bonus_in_games.py  categories.py  colors.py  comments.py  games.py  grids.py  images.py  jokers.py  jokers_in_games.py  jokers_used_in_games.py  players.py  questions.py  refresh_tokens.py  rounds.py  themes.py  users.py  videos.py
app/db/repositories/: audios.py  base.py  bonus.py  bonus_in_games.py  categories.py  colors.py  comments.py  games.py  grids.py  images.py  jokers.py  jokers_in_games.py  jokers_used_in_games.py  players.py  questions.py  refresh_tokens.py  rounds.py  themes.py  users.py  videos.py
app/domain/: models.py  repositories.py  schemas.py  services.py
app/features/authentication/: schemas.py  services.py
app/features/comments/: schemas.py  services.py
app/features/games/: schemas.py  services.py
app/features/media/: schemas.py  services.py
app/features/questions/: schemas.py  services.py
app/features/themes/: schemas.py  services.py
app/features/users/: repositories.py  schemas.py  services.py
app/models/: users.py
app/security/: tokens.py
app/utils/: images.py  media_files.py  s3.py
scripts/: minio-init.sh  seed.py
